// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: MenuBar sidebar 1`] = `
.c12 {
  vertical-align: middle;
}

.c5 {
  vertical-align: middle;
}

.c4 {
  cursor: pointer;
  border: none;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  color: inherit;
  font: inherit;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 60px;
  height: 60px;
  padding: 8px;
}

.c4:active,
.c4:focus {
  outline: none;
}

.c4::-moz-focus-inner {
  border: none;
}

.c4 img,
.c4 svg {
  width: 24px;
  height: 24px;
}

.c4:hover {
  color: hsl(200,96%,35%);
}

.c4.c4.c4.c4:focus {
  box-shadow: inset 0px 0px 0px 1px hsl(200,96%,35%);
}

.c4.c4.c4.c4[aria-expanded='true'] {
  background-color: hsl(200,96%,35%);
  color: hsl(0,0%,100%);
  box-shadow: none;
}

.c0 {
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  position: relative;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0:empty {
  display: none;
}

.c0.cactus-layout-floatLeft,
.c0.cactus-layout-fixedLeft {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-shadow: inset -1px 0px 0px 0px hsl(200,29%,90%);
}

.c0.cactus-layout-floatLeft .c3,
.c0.cactus-layout-fixedLeft .c3 {
  box-shadow: inset 0px -1px 0px 0px hsl(200,29%,90%);
}

.c0.cactus-layout-floatLeft .c3:hover,
.c0.cactus-layout-fixedLeft .c3:hover {
  box-shadow: inset 0px -1px 0px 0px hsl(200,96%,35%);
}

.c0.cactus-layout-fixedBottom {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-shadow: inset 0px 1px 0px 0px hsl(200,29%,90%);
}

.c0.cactus-layout-fixedBottom .c3[aria-expanded='true']::after {
  content: '';
  z-index: 99;
  background-color: rgba(0,0,0,0.5);
  position: fixed;
  top: 0;
  bottom: 60px;
  left: 0;
  right: 0;
  cursor: default;
}

.c7 {
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  box-sizing: border-box;
  z-index: 100;
  outline: none;
  display: block;
  height: auto;
  width: auto;
  overflow: auto;
  width: 350px;
  padding: 8px;
  padding: 0;
}

.c7[aria-hidden='true'] {
  display: none;
}

.c2 {
  outline: none;
  border: none;
  margin: 0;
  padding: 0;
  display: block;
  background-color: transparent;
}

.c10 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.cactus-layout-fixedBottom .c1 {
  position: absolute;
  left: 0;
  bottom: 0;
}

.c13 {
  list-style: none;
  padding: 0;
  margin: 0;
  display: none;
}

.c6 {
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  font-size: 15px;
  line-height: 1.6;
  list-style: none;
  padding: 0;
  margin: 0;
}

.c6 [role='menuitem'] {
  padding: 18px 16px;
  border-bottom: 1px solid hsl(200,29%,90%);
  position: relative;
  overflow: visible;
}

.c6 [role='menuitem'] .c11 {
  -webkit-transform: rotateZ(-90deg);
  -ms-transform: rotateZ(-90deg);
  transform: rotateZ(-90deg);
}

.c6 [role='menuitem'][aria-expanded='true'] .c11 {
  -webkit-transform: rotateZ(90deg);
  -ms-transform: rotateZ(90deg);
  transform: rotateZ(90deg);
}

.c6 [role='menuitem']:hover,
.c6 [role='menuitem'][aria-expanded='true'] {
  color: hsl(200,96%,35%);
  border-bottom-color: hsl(200,96%,35%);
}

.c6 [role='menuitem']:focus::after {
  border: 1px solid hsl(200,96%,35%);
  background-color: transparent;
  box-sizing: border-box;
  width: 100%;
  height: calc(100% + 1px);
  content: '';
  position: absolute;
  left: 0;
  top: 0;
}

.c6 [role='menuitem'][aria-current='true'],
.c6 [role='menuitem'][aria-expanded='true'] {
  font-weight: 600;
}

.c6 [role='menu'] {
  background-color: hsl(200,29%,90%);
  padding-left: 8px;
}

.c6 [role='menu'] [role='menu'] {
  padding-left: 14px;
}

.c8 {
  cursor: pointer;
  border: none;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  color: inherit;
  font: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c8:active,
.c8:focus {
  outline: none;
}

.c8::-moz-focus-inner {
  border: none;
}

.c8 .c11 {
  width: 8px;
  height: 8px;
  margin-left: 16px;
}

@media screen and (min-width:1024px) {
  .c6 {
    font-size: 15px;
    line-height: 1.6;
  }
}

<div>
  <div
    class="c0 cactus-layout-fixedLeft"
  >
    <nav
      aria-label="Menu of Main-ness"
      aria-orientation="vertical"
      class="c1 c2"
      id="mb"
      tabindex="-1"
    >
      <button
        aria-controls="mb-popup"
        aria-haspopup="menu"
        class="c3 c4"
        id="mb-button"
        role="button"
      >
        <svg
          class="c5"
          fill="currentcolor"
          height="1em"
          viewBox="0 0 24 24"
          width="1em"
        >
          <path
            d="M2,5 C1.44771525,5 1,4.55228475 1,4 C1,3.44771525 1.44771525,3 2,3 L22,3 C22.5522847,3 23,3.44771525 23,4 C23,4.55228475 22.5522847,5 22,5 L2,5 Z M2,13 C1.44771525,13 1,12.5522847 1,12 C1,11.4477153 1.44771525,11 2,11 L22,11 C22.5522847,11 23,11.4477153 23,12 C23,12.5522847 22.5522847,13 22,13 L2,13 Z M2,21 C1.44771525,21 1,20.5522847 1,20 C1,19.4477153 1.44771525,19 2,19 L22,19 C22.5522847,19 23,19.4477153 23,20 C23,20.5522847 22.5522847,21 22,21 L2,21 Z"
          />
        </svg>
      </button>
      <ul
        aria-hidden="true"
        aria-labelledby="mb-button"
        aria-orientation="vertical"
        class="c6 c7"
        id="mb-popup"
        role="menu"
        tabindex="-1"
      >
        <li
          role="none"
        >
          <button
            aria-current="true"
            aria-expanded="false"
            aria-haspopup="menu"
            class="c8"
            role="menuitem"
            tabindex="-1"
          >
            <div
              class="c9"
            >
              <em>
                Emphasized
              </em>
            </div>
            <div
              aria-hidden="true"
              class="c10"
            >
              <svg
                class="c11 c12"
                fill="currentcolor"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
                  transform="rotate(-90 12 12)"
                />
              </svg>
            </div>
          </button>
          <ul
            aria-orientation="vertical"
            class="c13"
            role="menu"
          >
            <li
              role="none"
            >
              <a
                aria-current="true"
                class="c8"
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Link to the Past
              </a>
            </li>
            <li
              role="none"
            >
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                class="c8"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="c9"
                >
                  Nested
                </div>
                <div
                  aria-hidden="true"
                  class="c10"
                >
                  <svg
                    class="c11 c12"
                    fill="currentcolor"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
                      transform="rotate(-90 12 12)"
                    />
                  </svg>
                </div>
              </button>
              <ul
                aria-orientation="vertical"
                class="c13"
                role="menu"
              >
                <li
                  role="none"
                >
                  <a
                    href="#"
                  >
                    Birdy
                  </a>
                </li>
                <li
                  role="none"
                >
                  <button
                    aria-current="true"
                    class="c8"
                    role="menuitem"
                    tabindex="-1"
                  >
                    The Mighty
                  </button>
                </li>
                <li
                  role="none"
                >
                  <div>
                    <em>
                      Decode
                    </em>
                     
                  </div>
                </li>
              </ul>
            </li>
          </ul>
        </li>
        <li
          role="none"
        >
          <button
            aria-current="true"
            class="c8"
            role="menuitem"
            tabindex="-1"
          >
            <em>
              A button
            </em>
          </button>
        </li>
        <li
          role="none"
        >
          <a
            class="c8"
            role="menuitem"
            tabindex="-1"
          >
            Styled Link
          </a>
        </li>
        <li
          role="none"
        >
          class 2
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`component: MenuBar typechecks 1`] = `
.c8 {
  vertical-align: middle;
}

.c2 {
  vertical-align: middle;
}

.c13 {
  vertical-align: middle;
}

.c10 {
  vertical-align: middle;
}

.c6 {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}

.c5 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c1 {
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  display: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
  background-color: transparent;
  text-align: center;
  outline: none;
}

.c1:hover {
  color: hsl(200,96%,35%);
}

.c1 svg {
  width: 18px;
  height: 18px;
  margin: 8px;
}

.c12 {
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  cursor: pointer;
  background-color: transparent;
  text-align: center;
  outline: none;
}

.c12:hover {
  color: hsl(200,96%,35%);
}

.c12 svg {
  width: 18px;
  height: 18px;
  margin: 8px;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  position: relative;
  outline: none;
  font-size: 15px;
  line-height: 1.6;
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  box-shadow: inset 0 -1px 0 hsl(200,29%,90%);
}

.c0 [role='menubar'] > li > [role='menuitem'] {
  white-space: nowrap;
  padding: 20px 8px;
  border: 1px solid transparent;
  border-bottom-color: hsl(200,29%,90%);
}

.c0 [role='menubar'] > li > [role='menuitem']:hover,
.c0 [role='menubar'] > li > [role='menuitem'][aria-expanded='true'] {
  color: hsl(200,96%,35%);
  border-bottom-color: hsl(200,96%,35%);
}

.c0 [role='menubar'] > li > [role='menuitem']:focus {
  border: 1px solid hsl(200,96%,35%);
}

.c0 [role='menubar'] > li > [role='menuitem'][aria-current='true'] {
  font-weight: bold;
}

.c9 {
  background-color: hsl(0,0%,100%);
  color: hsl(200,10%,20%);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  visibility: visible;
  position: absolute;
  top: 100%;
  left: 0;
  outline: none;
  border: 1px solid hsl(200,29%,90%);
  border-radius: 8px;
  box-shadow: 0px 3px 8px hsla(200,96%,35%,0.3);
  white-space: normal;
  -webkit-flex-flow: column nowrap;
  -ms-flex-flow: column nowrap;
  flex-flow: column nowrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  width: auto;
  min-width: 200px;
  max-width: 320px;
  max-height: 70vh;
  z-index: 1;
}

.c9[aria-hidden='true'] {
  visibility: hidden;
}

.c9 [role='menuitem'] {
  padding: 4px 8px;
}

.c9 [role='menuitem'] .c7 {
  -webkit-transform: rotateZ(-90deg);
  -ms-transform: rotateZ(-90deg);
  transform: rotateZ(-90deg);
}

.c9 [role='menuitem'][aria-expanded='true'] {
  background-color: hsl(200,29%,90%);
}

.c9 [role='menuitem'][aria-expanded='true'] .c7 {
  -webkit-transform: rotateZ(90deg);
  -ms-transform: rotateZ(90deg);
  transform: rotateZ(90deg);
}

.c9 [role='menuitem']:hover {
  color: hsl(200,96%,35%);
}

.c9 [role='menuitem']:focus {
  background-color: hsl(200,29%,90%);
  color: hsl(200,96%,35%);
}

.c3 {
  list-style: none;
  padding: 0;
  margin: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  overflow: hidden;
}

.c11 {
  list-style: none;
  padding: 0;
  margin: 0;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  overflow: hidden;
}

.c4 {
  cursor: pointer;
  border: none;
  outline: none;
  background-color: transparent;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: left;
  color: inherit;
  font: inherit;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
}

.c4:active,
.c4:focus {
  outline: none;
}

.c4::-moz-focus-inner {
  border: none;
}

.c4 .c7 {
  width: 8px;
  height: 8px;
  margin-left: 16px;
}

@media screen and (min-width:1024px) {
  .c0 {
    font-size: 15px;
    line-height: 1.6;
  }
}

<div>
  <nav
    aria-label="Menu of Main-ness"
    class="c0"
    id="mb"
    tabindex="-1"
  >
    <div
      aria-hidden="true"
      class="c1"
    >
      <svg
        class="c2"
        fill="currentcolor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
        />
      </svg>
    </div>
    <ul
      aria-orientation="horizontal"
      class="c3"
      role="menubar"
    >
      <li
        role="none"
      >
        <button
          aria-current="true"
          aria-expanded="false"
          aria-haspopup="menu"
          class="c4"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="c5"
          >
            <em>
              Emphasized
            </em>
          </div>
          <div
            aria-hidden="true"
            class="c6"
          >
            <svg
              class="c7 c8"
              fill="currentcolor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
                transform="rotate(-90 12 12)"
              />
            </svg>
          </div>
        </button>
        <div
          aria-hidden="true"
          class="c9"
          tabindex="-1"
        >
          <div
            aria-hidden="true"
            class="c1"
          >
            <svg
              class="c10"
              fill="currentcolor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
                transform="matrix(0 1 1 0 0 0)"
              />
            </svg>
          </div>
          <ul
            aria-orientation="vertical"
            class="c11"
            role="menu"
          >
            <li
              role="none"
            >
              <a
                aria-current="true"
                class="c4"
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Link to the Past
              </a>
            </li>
            <li
              role="none"
            >
              <button
                aria-expanded="false"
                aria-haspopup="menu"
                class="c4"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="c5"
                >
                  Nested
                </div>
                <div
                  aria-hidden="true"
                  class="c6"
                >
                  <svg
                    class="c7 c8"
                    fill="currentcolor"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
                      transform="rotate(-90 12 12)"
                    />
                  </svg>
                </div>
              </button>
              <div
                aria-hidden="true"
                class="c9"
                tabindex="-1"
              >
                <div
                  aria-hidden="true"
                  class="c1"
                >
                  <svg
                    class="c10"
                    fill="currentcolor"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
                      transform="matrix(0 1 1 0 0 0)"
                    />
                  </svg>
                </div>
                <ul
                  aria-orientation="vertical"
                  class="c11"
                  role="menu"
                >
                  <li
                    role="none"
                  >
                    <a
                      href="#"
                    >
                      Birdy
                    </a>
                  </li>
                  <li
                    role="none"
                  >
                    <button
                      aria-current="true"
                      class="c4"
                      role="menuitem"
                      tabindex="-1"
                    >
                      The Mighty
                    </button>
                  </li>
                  <li
                    role="none"
                  >
                    <div>
                      <em>
                        Decode
                      </em>
                       
                    </div>
                  </li>
                </ul>
                <div
                  aria-hidden="true"
                  class="c1"
                >
                  <svg
                    class="c7 c8"
                    fill="currentcolor"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
                      transform="rotate(-90 12 12)"
                    />
                  </svg>
                </div>
              </div>
            </li>
          </ul>
          <div
            aria-hidden="true"
            class="c1"
          >
            <svg
              class="c7 c8"
              fill="currentcolor"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
            >
              <path
                d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
                transform="rotate(-90 12 12)"
              />
            </svg>
          </div>
        </div>
      </li>
      <li
        role="none"
      >
        <button
          aria-current="true"
          class="c4"
          role="menuitem"
          tabindex="-1"
        >
          <em>
            A button
          </em>
        </button>
      </li>
      <li
        role="none"
      >
        <a
          class="c4"
          role="menuitem"
          tabindex="-1"
        >
          Styled Link
        </a>
      </li>
      <li
        role="none"
      >
        class 2
      </li>
    </ul>
    <div
      aria-hidden="true"
      class="c12"
    >
      <svg
        class="c13"
        fill="currentcolor"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M17.7071068,2.70710678 C18.0976311,2.31658249 18.0976311,1.68341751 17.7071068,1.29289322 C17.3165825,0.902368927 16.6834175,0.902368927 16.2928932,1.29289322 L6.29289322,11.2928932 C5.90236893,11.6834175 5.90236893,12.3165825 6.29289322,12.7071068 L16.2928932,22.7071068 C16.6834175,23.0976311 17.3165825,23.0976311 17.7071068,22.7071068 C18.0976311,22.3165825 18.0976311,21.6834175 17.7071068,21.2928932 L8.41421356,12 L17.7071068,2.70710678 Z"
          transform="matrix(-1 0 0 1 24 0)"
        />
      </svg>
    </div>
  </nav>
</div>
`;
